# tutor-contrib-wordpress

./: .hatch_build.py  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
changelog.d/: 20250225_110231_codewithemad_migrate_to_pyproject.md  20250416_181359_codewithemad.md  scriv.ini
changelog.d/scriv/: github_release.md.j2
tutorwordpress/: plugin.py
tutorwordpress/patches/: caddyfile  k8s-deployments  k8s-jobs  k8s-services  k8s-volumes  local-docker-compose-caddy-aliases  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-services
tutorwordpress/templates/wordpress/tasks/lms/: init.sh
tutorwordpress/templates/wordpress/tasks/mysql/: init.sh
