# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-wordpress"
license = { text = "AGPL-3.0-only" }
authors = [
  {name = "Emad Rad"}, {email = "codewithemad@gmail.com"},
]
description = "wordpress plugin for Tutor"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=15.0.0,<20.0.0",
  "importlib_resources"
]
# these fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=15.0.0,<20.0.0",
  "pylint",
  "black"
]

[project.entry-points."tutor.plugin.v1"]
wordpress = "tutorwordpress.plugin"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Code = "https://github.com/CodeWithEmad/tutor-contrib-wordpress"
Issues = "https://github.com/CodeWithEmad/tutor-contrib-wordpress/issues"
Changelog = "https://github.com/CodeWithEmad/tutor-contrib-wordpress/blob/master/CHANGELOG.md"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorwordpress"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["tutorwordpress"]